--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-cayman
 
 # Setup
-title:        IIPC
-tagline:      IIPC Open Development
+title:        IIPC Community Resources
+tagline:      IIPC Community Resources
 baseurl:      ""
 paginate:     1
 
